# ESAA---Event-Sourcing-Agent-Architecture

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  opt_artifacts.py  pyproject.toml  readme.md
.claude/: CLAUDE.md
.roadmap/: AGENT_CONTRACT.yaml  ORCHESTRATOR_CONTRACT.yaml  PARCER_PROFILE.agent-docs.yaml  PARCER_PROFILE.orchestrator-runtime.yaml  PROJECTION_SPEC.md  RUNTIME_POLICY.yaml  STORAGE_POLICY.yaml  activity.jsonl  agent_result.schema.json  agents_swarm.yaml  init.yaml  issues.json  lessons.json  orchestrator-runtime.yaml  roadmap.audit.json  roadmap.cmm5.json  roadmap.critical-fixes.json  roadmap.fix.json  roadmap.json  roadmap.opt.json  roadmap.post-survey-fixes.json
docs/: quickstart.md
src/: T-1010.txt
tests/: conftest.py  test_activity_clear_lessons_reseed.py  test_adapters_llm.py  test_atomic_file_effects.py  test_atomic_file_effects_integration.py  test_audit_critical_findings.py  test_baseline_lessons_seed.py  test_behavioral_critical_findings.py  test_deterministic_cli_commands.py  test_done_evidence_quality.py  test_dry_run_semantics.py  test_external_plugin_effects.py  test_external_runner_metrics.py  test_file_effect_artifact_retention.py  test_file_effect_artifacts.py  test_file_effect_recovery.py  test_hotfix_create_e2e_validation.py  test_hotfix_create_validation.py  test_hotfix_lifecycle.py  test_hotfix_production_trace.py  test_http_llm_adapter.py  test_independent_qa_review_policy.py  test_issue_report_done_command.py  test_metrics.py  test_mock_adapter.py  test_parallel_dispatch.py  test_plugin_loader.py  test_post_survey_fixes.py  test_prior_status_done_issue_report.py  test_projection_workflow.py  test_public_beta_release.py  test_reject_codes_inventory.py  test_repository_hygiene.py  test_review_role_policy.py  test_run_consumes_plugin_tasks.py  test_runner_metrics_contracts.py  test_runner_metrics_e2e.py  (+10 more)
(+148 files in other folders)
